--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>www.Mbiopeter.co.ke</title>
+    <title>www.mbiopeter.co.ke</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/1bc1180a30.js" crossorigin="anonymous"></script>
 </head>
