--- a/index.html
+++ b/index.html
@@ -84,29 +84,26 @@
             <div>
                 <i class="fa-solid fa-code"></i>
                 <h2>Web Design</h2>
-                <p>Line breaks are not allowed between the ‘continue’ or ‘break’ statement
-                    and its label name. Also, there should not be any other statement in between a
-                    label name and associated loop.
+                <p>
+                    I design user friendly and attractive website on cost effective basis.<br> This websites may either be personal website, work website or company advertisment website.<br> Feel free to contact me for website design.
                 </p>
-                <a href="#">Learn More</a>
+                <a href="https://www.strikingly.com/s/lp/promo?utm_source=google-sem&utm_medium=cpc&utm_campaign=v2-s-tz-computers-search-hi-build_website-en&utm_content=v2a-s-tz-computers-search-hi-build_website-build_website-en&utm_term=website%20builders%20in%20kenya&gclid=Cj0KCQiAnsqdBhCGARIsAAyjYjT1T1joX4XzlOWAY5wp0vH01-umvdMZz8HV9B4cn71FRbGcz1uW6j0aAlHJEALw_wcB">Learn More</a>
             </div>
             <div>
                 <i class="fa-solid fa-crop-simple"></i>
                 <h2>Software Dev </h2>
-                <p>Line breaks are not allowed between the ‘continue’ or ‘break’ statement
-                    and its label name. Also, there should not be any other statement in between a
-                    label name and associated loop.
+                <p>
+                    I design all kind of softwares as per the users specifications <br> and requirement. The developed softwares are of high quality to ensure that they <br> meet users requirents and day to day activities in a cost effective way.
                 </p>
-                <a href="#">Learn More</a>
+                <a href="https://colaninfotech.com/services/?utm_medium=adwords&utm_campaign=_Technologies_all_Location_generic&utm_adgroup=&utm_term=software%20development%20company&utm_device=c&utm_matchtype=e&gclid=Cj0KCQiAnsqdBhCGARIsAAyjYjS077kddONsWO1aHrC2Yui_izIx4PgN4yrqR7rYKEKpzwMXK16WDf0aApsfEALw_wcB">Learn More</a>
             </div>
             <div>
                 <i class="fa-brands fa-app-store"></i>
                 <h2>Mobile App Design</h2>
-                <p>Line breaks are not allowed between the ‘continue’ or ‘break’ statement
-                    and its label name. Also, there should not be any other statement in between a
-                    label name and associated loop.
+                <p>
+                    The world is changing in terms of technologies in the way day to day activities are carried out. I design All operating system compatible mobile app which helps ease how daily operation are caried.
                 </p>
-                <a href="#">Learn More</a>
+                <a href="https://flutter.dev/multi-platform?gclid=Cj0KCQiAnsqdBhCGARIsAAyjYjRh-4Nv2mnMfmwk10SqxPoSHlLMNTmMRmjclFVzvKHfqAyuB6zKxnIaAg-tEALw_wcB&gclsrc=aw.ds">Learn More</a>
             </div>
         </div>
 
@@ -123,17 +120,17 @@
             <img src="images/work-1.png" alt="">
             <div class="layer">
                 <h3>Social Media App</h3>
-                <p>Font Awesome is the internet's icon library and 
-                    toolkit used by millions of designers, developers, and content creators.</p>
-                    <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                <p>
+                    In the development process I was able to come app with a social media web app which is called social book.it is user friendly as it work as most social media platforms like facebook
+                    </p>
+                    <a href="https://web.facebook.com/?_rdc=1&_rdr"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
         </div>
         <div class="work">
             <img src="images/work-2.png" alt="">
             <div class="layer">
                 <h3>Mubile App</h3>
-                <p>Font Awesome is the internet's icon library and 
-                    toolkit used by millions of designers, developers, and content creators.</p>
+                <p>I was able to come up with a mobile app password generator which helps to generate a user friendly and secure password as per the user requirements.</p>
                     <a href="https://mbiopeter.github.io/password-generator.com/"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
         </div>
@@ -141,9 +138,9 @@
             <img src="images/work-3.png" alt="">
             <div class="layer">
                 <h3>Online Shopping App</h3>
-                <p>Font Awesome is the internet's icon library and 
-                    toolkit used by millions of designers, developers, and content creators.</p>
-                    <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                <p>
+                    I was  part of the development team which come up with the famouse jumia online shooping app</p>
+                    <a href="https://www.jumia.co.ke/mobile-phones/"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
         </div>
      </div>
