--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="layer">
                 <h3>Social Media App</h3>
                 <p>
-                    In the development process I was able to come app with a social media web app which is called social book.it is user friendly as it work as most social media platforms like facebook
+                    In the development process I was able to come up with a social media web app which is called social book.it is user friendly as it work as most social media platforms like facebook
                     </p>
                     <a href="https://web.facebook.com/?_rdc=1&_rdr"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
