--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <a href="https://twitter.com/home"><i class="fa-brands fa-twitter"></i></a>
                     <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.youtube.com/channel/UCnmwh432bC8Rx704mjyB_Lw"><i class="fa-brands fa-youtube"></i></a>
-                     <a href=”https://wa.me/0759595268/?text=Hi Peter, Whatsup“><i class="fa-brands fa-whatsapp"></i></a>
+                     <a href="https://wa.me/0759595268"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
                 <a href="images/Exam_Result_PA106_G_14448_21.pdf" download="" class="btn btn2" >Download Me</a>
             </div>
